# ninep

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/p9n-auth/: Cargo.toml
crates/p9n-auth/src/: error.rs  lib.rs
crates/p9n-auth/src/spiffe/: cert_resolver.rs  chain_verifier.rs  jwt_svid.rs  mod.rs  posix_identity.rs  posix_mapping.rs  server_verifier.rs  tls_config.rs  trust_bundle.rs  verifier.rs  workload_api.rs  x509_svid.rs
crates/p9n-auth/src/spiffe/grpc/: client.rs  frame.rs  mod.rs  proto.rs
crates/p9n-auth/tests/: auth_test.rs
crates/p9n-exporter/: Cargo.toml
crates/p9n-exporter/src/: access.rs  config.rs  exporter.rs  fid_table.rs  heartbeat.rs  lease_manager.rs  lib.rs  logging.rs  main.rs  posix_mapping_state.rs  push.rs  quic_connection.rs  rdma_connection.rs  session.rs  session_store.rs  shared.rs  tcp_connection.rs  util.rs  watch_manager.rs
crates/p9n-exporter/src/backend/: local.rs  mod.rs
crates/p9n-exporter/src/handlers/: acl.rs  allocate.rs  attach.rs  auth.rs  capgrant.rs  clunk.rs  compound.rs  compress.rs  consistency.rs  copy_range.rs  create.rs  dir.rs  flush.rs  hash.rs  health.rs  io.rs  lease.rs  lock.rs  mknod.rs  mod.rs  negotiate.rs  quicstream.rs  ratelimit.rs  rdma.rs  remove.rs  rename.rs  serverstats.rs  session.rs  spiffe.rs  stat.rs  stream_io.rs  stubs.rs  trace.rs  version.rs  walk.rs  watch.rs  xattr.rs  xattrwalk.rs
crates/p9n-exporter/tests/: integration_test.rs
crates/p9n-importer/: Cargo.toml
crates/p9n-importer/src/: error.rs  importer.rs  lib.rs  logging.rs  main.rs  posix_bootstrap.rs  push_receiver.rs  quic_rpc.rs  rdma_rpc.rs  rpc_client.rs  shutdown.rs  tcp_rpc.rs
crates/p9n-importer/src/fuse/: attr_cache.rs  compound.rs  dir_cache.rs  fid_pool.rs  filesystem.rs  inode_map.rs  lease_map.rs  mod.rs
crates/p9n-importer/tests/: importer_test.rs
crates/p9n-proto/: Cargo.toml
crates/p9n-proto/src/: buf.rs  caps.rs  classify.rs  codec.rs  error.rs  fcall.rs  lib.rs  tag.rs  types.rs  wire.rs
crates/p9n-proto/tests/: codec_test.rs
crates/p9n-transport/: Cargo.toml  build.rs
crates/p9n-transport/src/: error.rs  framing.rs  lib.rs
crates/p9n-transport/src/quic/: config.rs  connect.rs  connection.rs  datagram.rs  framing.rs  mod.rs  router.rs  streams.rs  zero_rtt.rs
crates/p9n-transport/src/rdma/: config.rs  connection.rs  ffi.rs  mod.rs  mr_pool.rs  verbs.rs
crates/p9n-transport/src/tcp/: config.rs  connection.rs  mod.rs
crates/p9n-transport/tests/: transport_test.rs
docs/: ARCH_DESIGN.md  ARCH_DESIGN_DECISION.md  COMPARISON.md  POSIX_IDENTITY.md  QUICSTREAM.md  RCGEN_USAGE.md  SECURITY_DESIGN.md  SPIRE_SETUP.md  THREAD_MODEL.md  TROUBLESHOOTING.md
