[package]
name = "p9n-auth"
description = "9P2000.N SPIFFE authentication provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
workload-api = ["h2", "http", "bytes"]

[dependencies]
p9n-proto = { path = "../p9n-proto" }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki = { package = "rustls-webpki", version = "0.103" }
x509-parser = "0.16"
thiserror = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
parking_lot = "0.12"
h2 = { workspace = true, optional = true }
http = { workspace = true, optional = true }
bytes = { version = "1", optional = true }

[dev-dependencies]
rcgen = "0.13"
